Fix text color of navigation on staking page. Dark text on dark background isn't readable.

--- a/src/scss/new-flavor.scss
+++ b/src/scss/new-flavor.scss
@@ -810,7 +810,7 @@ p.is-large {
     background-color: transparent !important;
     box-shadow: none;
   }
-
+  
   .logo {
     display: flex;
     align-items: center;
@@ -935,6 +935,10 @@ p.is-large {
         width: 0%;
       }
     }
+  }
+
+  &.is-inverted.is-transparent a:not(.button) {
+    color: #fff;
   }
 
   .navbar-menu {
